# mitsuki

./: .gitignore  README.md  ecosystem.config.js  example.env  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py
defaults/: messages.yaml  settings.yaml
exampleassets/: gacha_roster.yaml  gacha_settings.yaml
messages/: about.yaml  defaults.yaml  errors.yaml  messages.yaml
messages/gacha/: admin.yaml  cards.yaml  daily.yaml  details.yaml  give.yaml  info.yaml  main.yaml  profile.yaml  roll.yaml  shards.yaml  view.yaml
messages/info/: info.yaml
messages/schedule/: add.yaml  configure.yaml  create.yaml  errors.yaml  manage.yaml  messages.yaml  tag.yaml  view.yaml
messages/server/: emoji.yaml  info.yaml  nickname.yaml  stickers.yaml
messages/system/: nickname.yaml  presences.yaml
messages/user/: avatar.yaml  info.yaml
mitsuki/: __init__.py  common.py  consts.py  core.py  logger.py  messages.py  paginators.py  settings.py  userdata.py  utils.py  version.py
mitsuki/client/: __init__.py  client.py  handler.py
mitsuki/core/: settings.py
mitsuki/gacha/: __init__.py  commands.py  gachaman.py  schema.py  userdata.py
mitsuki/info/: __init__.py  commands.py
mitsuki/lib/: autopost.py  checks.py  commands.py  emoji.py  errors.py  messages.py  paginators.py  userdata.py  view.py
mitsuki/models/: presences.py  settings.py
mitsuki/settings2/: schema.py  (+2 more)
settings/: messages.yaml
tests/: conftest.py  test_init.py  test_presencer.py  test_schedule.py
tools/: migrate_1to2.sql  migrate_4to5.sql  migrate_4to5_01.sql  migrate_4to5_02.sql
(+153 files in other folders)
